--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<header></header>
+<!-- nav bar -->
+<header> </header>
+
+<!-- featurette -->
+
 </body>
 </html>
