--- a/index.html
+++ b/index.html
@@ -1,19 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>Luckybox</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>The Lucky Box</title>
 </head>
 <body>
 
 
+<header>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Click here to choose your box</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Filmbox<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Candybox</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Hobby's</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Customers
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Register</a>
+                        <a class="dropdown-item" href="#">Login</a>
+                        <a class="dropdown-item" href="#">Customize box</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+</header>
+
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://lorempixel.com/900/400/" class="d-block w-100" alt="changing picture">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Filmbox</h5>
+                <p>Customize your Filmbox and choose your desired items</p>
+                <a href="#" class="btn btn-primary">Get Quality</a>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="https://lorempixel.com/900/400/" class="d-block w-100" alt="changing picture">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Candybox</h5>
+                <p>Customize your Candybox heren and choose your favourite candy</p>
+                <a href="#" class="btn btn-primary">Get Service</a>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="https://lorempixel.com/900/400/" class="d-block w-100" alt="changing picture">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Hobby's</h5>
+                <p>Customize your Stationary box here and choose your favourite items</p>
+                <a href="#" class="btn btn-primary">Get Service</a>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+<br>
+<br>
+
+<div class="container">
+    <div class="row">
+
+        <div class="col-md-4 border-0 " align="center">
+            <img class="rounded-circle" src="https://lorempixel.com/900/400/" alt="changing picture" width="140" height="140">
+            <div class="card-body" >
+                <h5 class="card-title">Filmbox</h5>
+                <p class="card-text">Customize your Filmbox and choose your desired items</p>
+                <a href="#" class="btn btn-primary">Get Quality</a>
+            </div>
+        </div>
+
+        <div class="col-md-4 border-0" align="center">
+            <img class="rounded-circle" src="https://lorempixel.com/900/400/" alt="changing picture" width="140" height="140">
+            <div class="card-body">
+                <h5 class="card-title">Candybox</h5>
+                <p class="card-text">Customize your Candybox heren and choose your favourite candy</p>
+                <a href="#" class="btn btn-primary">Get Service</a>
+            </div>
+        </div>
+
+        <div class="col-md-4 border-0" align="center">
+            <img class="rounded-circle" src="https://lorempixel.com/900/400/" alt="changing picture" width="140" height="140">
+            <div class="card-body" >
+                <h5 class="card-title">Hobby's</h5>
+                <p class="card-text">Customize your Stationary box here and choose your favourite items</p>
+                <a href="#" class="btn btn-primary">Get to paying</a>
+            </div>
+        </div>
+
+    </div>
+</div>
+<br>
+<div class="card align-items-center">
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters flex-row-reverse">
+            <div class="col-md-4">
+                <img src="https://lorempixel.com/900/400/" class="card-img" alt="changing picture">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+                <img src="https://lorempixel.com/900/400/" class="card-img" alt="changing picture">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row no-gutters flex-row-reverse ">
+            <div class="col-md-4">
+                <img src="https://lorempixel.com/900/400/" class="card-img" alt="changing picture">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
@@ -28,9 +183,14 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
 
 
 </body>
