--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 </head>
 <body>
@@ -11,7 +15,42 @@
 <header class=""> </header>
 
 <!-- featurette -->
+<div class="contact-title">
 
+   <h3>Contact Us</h3>
+    <p>we are always ready to help!</p>
+
+<!-- animation-->
+
+<!-- contact form -->
+    <div class="contact1">
+        <div class="container-contact1">
+            <div class="form" >
+
+                    <input class="input1" type="text" name="name" placeholder="Name"/>
+                    <label for="input" class="label-name"><span class="content-name"></span></label>
+
+                <div class="wrap-input1 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                    <input class="input1" type="text" name="email" placeholder="Email">
+                    <span class="shadow-input1"></span>
+                </div>
+                <div class="wrap-input1 validate-input" data-validate="Subject is required">
+                    <input class="input1" type="text" name="subject" placeholder="Subject">
+                    <span class="shadow-input1"></span>
+                </div>
+                <div class="wrap-input1 validate-input" data-validate="Message is required">
+                    <textarea class="input1" name="message" placeholder="Message"></textarea>
+                    <span class="shadow-input1"></span>
+                </div>
+                <div class="container-contact1-form-btn">
+                    <button class="contact1-form-btn">
+                    <span>Send Email</span>
+                    </button>
+                </div>
+
+            </form>
+        </div>
+    </div>
 
 
 
