Working on Form

--- a/Login.html
+++ b/Login.html
@@ -37,6 +37,23 @@
         </div>
     </nav>
 </header>
+
+<form class="login" action="/action_page.php">
+    First name:<br>
+    <input type="text" name="firstname" value=""><br>
+    Last name:<br>
+    <input type="text" name="lastname" value=""><br><br>
+    Address:<br>
+    <input type="text" name="lastname" value=""> <input type="text" name="lastname" value=""><br><br>
+    E-mail:<br>
+    <input type="text" name="lastname" value=""><br><br>
+
+
+
+
+
+    <input type="submit" value="Submit">
+</form>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
