--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="#">Candybox</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Hobby's</a>
+                    <a class="nav-link" href="#">Stationarybox</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -52,27 +52,27 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://lorempixel.com/900/400/" class="d-block w-100" alt="changing picture">
+            <img src="img/movies.jpg" alt="changing picture">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Filmbox</h5>
                 <p>Customize your Filmbox and choose your desired items</p>
-                <a href="#" class="btn btn-primary">Get Quality</a>
+                <a href="#" class="btn btn-primary">Get Filmbox</a>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://lorempixel.com/900/400/" class="d-block w-100" alt="changing picture">
+            <img src="img/snackies.jpeg" class="d-block w-100" alt="changing picture">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Candybox</h5>
-                <p>Customize your Candybox heren and choose your favourite candy</p>
-                <a href="#" class="btn btn-primary">Get Service</a>
+                <h5>Snackbox</h5>
+                <p>Customize your Snackbox heren and choose your favourite candy</p>
+                <a href="#" class="btn btn-primary">Get Snackbox</a>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://lorempixel.com/900/400/" class="d-block w-100" alt="changing picture">
+            <img src="img/art.jpg" class="d-block w-100" alt="changing picture">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Hobby's</h5>
+                <h5>Stationary box</h5>
                 <p>Customize your Stationary box here and choose your favourite items</p>
-                <a href="#" class="btn btn-primary">Get Service</a>
+                <a href="#" class="btn btn-primary">Get Stationarybox</a>
             </div>
         </div>
     </div>
@@ -92,29 +92,29 @@
     <div class="row">
 
         <div class="col-md-4 border-0 " align="center">
-            <img class="rounded-circle" src="https://lorempixel.com/900/400/" alt="changing picture" width="140" height="140">
+            <img class="rounded-circle" src="img/movies.jpg" alt="changing picture" width="140" height="140">
             <div class="card-body" >
                 <h5 class="card-title">Filmbox</h5>
                 <p class="card-text">Customize your Filmbox and choose your desired items</p>
-                <a href="#" class="btn btn-primary">Get Quality</a>
+                <a href="#" class="btn btn-primary">Get Filmbox</a>
             </div>
         </div>
 
         <div class="col-md-4 border-0" align="center">
-            <img class="rounded-circle" src="https://lorempixel.com/900/400/" alt="changing picture" width="140" height="140">
+            <img class="rounded-circle" src="img/snacks.jpg" alt="changing picture" width="140" height="140">
             <div class="card-body">
-                <h5 class="card-title">Candybox</h5>
-                <p class="card-text">Customize your Candybox heren and choose your favourite candy</p>
-                <a href="#" class="btn btn-primary">Get Service</a>
+                <h5 class="card-title">Snackbox</h5>
+                <p class="card-text">Customize your Snackbox heren and choose your favourite candy</p>
+                <a href="#" class="btn btn-primary">Get Snackbox</a>
             </div>
         </div>
 
         <div class="col-md-4 border-0" align="center">
-            <img class="rounded-circle" src="https://lorempixel.com/900/400/" alt="changing picture" width="140" height="140">
+            <img class="rounded-circle" src="img/stationary.jpg" alt="changing picture" width="140" height="140">
             <div class="card-body" >
-                <h5 class="card-title">Hobby's</h5>
+                <h5 class="card-title">Stationarybox</h5>
                 <p class="card-text">Customize your Stationary box here and choose your favourite items</p>
-                <a href="#" class="btn btn-primary">Get to paying</a>
+                <a href="#" class="btn btn-primary">Get Stationarybox</a>
             </div>
         </div>
 
@@ -125,12 +125,16 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters flex-row-reverse">
             <div class="col-md-4">
-                <img src="https://lorempixel.com/900/400/" class="card-img" alt="changing picture">
+                <img src="img/surprisebox.png" class="card-img" alt="changing picture">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Find the perfect box for you</h5>
+                    <p class="card-text">
+                        Find the perfect box for you
+
+                        No matter what you're interested in, you'll find a subscription box you love
+                    </p>
 
                 </div>
             </div>
@@ -141,12 +145,12 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters">
             <div class="col-md-4">
-                <img src="https://lorempixel.com/900/400/" class="card-img" alt="changing picture">
+                <img src="img/newbox.jpeg" class="card-img" alt="changing picture">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Find monthly new boxes</h5>
+                    <p class="card-text">Browse hundreds of subscription boxes, all in one place</p>
 
                 </div>
             </div>
@@ -157,12 +161,13 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters flex-row-reverse ">
             <div class="col-md-4">
-                <img src="https://lorempixel.com/900/400/" class="card-img" alt="changing picture">
+                <img src="img/newmail.jpg" class="card-img" alt="changing picture">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Receive fun things in your mail
+                    </h5>
+                    <p class="card-text">Receive curated products just for you on a recurring basis</p>
 
                 </div>
             </div>
@@ -174,7 +179,15 @@
 
 
 
+<footer>
 
+    Boxes&co
+    BE 302.878.1236
+    Sint Jansvliet 4
+    2018 Antwerpen
+    Tel: 03/654.23.89
+    Email: boxesenco@info.com
+</footer>
 
 
 
