added img and styling

--- a/custom.html
+++ b/custom.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="customstyle.css">
 </head>
+
 <body>
 <div class="ml-3">
 <h1 class="text-center pb-4">Customize your box</h1>
@@ -39,10 +40,10 @@
 </div>
 
 <div class="ml-3">
-<h2 class="step"> Step 2</h2>
-<h3> select your topics </h3>
-<h4> it is possible to add items from multiple topics to your box!!</h4>
-    <div class="row mt-4 pb-5 topics" id="topics">
+    <h2 class="step"> Step 2</h2>
+    <h3 id="topics"> select your topics </h3>
+    <h6> it is possible to add items from multiple topics to your box!!</h6>
+    <div class="row mt-4 pb-5 topics" >
         <!-- 3 large colums with text centered -->
         <div class="col-lg-4 text-center">
             <!-- rounded circle zorgt dat img in cirkel gecropt wordt -->
@@ -65,5 +66,51 @@
         </div>
     </div>
 </div>
+
+<div id="lootlist">
+    <h2 class="step ml-3"> Step 3</h2>
+    <h3 class="ml-3"> select your items </h3>
+    <div class="row">
+        <div class="imgxt">
+        <img  src="img/moviegadget1.jpg" width="200" height="200">
+            <div>
+                <label><input type="checkbox" /> baby yoda</label>
+            </div>
+        </div>
+        <div class="imgxt">
+            <img  src="img/moviegadget2.jpg" width="200" height="200">
+            <div>
+                <label><input type="checkbox" /> spider-man t-shirt</label>
+            </div>
+        </div>
+        <div class="imgxt">
+            <img  src="img/moviegadget3.jpg" width="200" height="200">
+            <div>
+                <label><input type="checkbox" /> car back to the future</label>
+            </div>
+        </div>
+        <div class="imgxt">
+            <img  src="img/moviegadget4.jpg" width="200" height="200">
+            <div>
+                <label><input type="checkbox" /> James Bond Q pin</label>
+            </div>
+        </div>
+
+
+
+
+
+    </div>
+    <div class="row">
+        <img  src="img/hobby.jpg" width="160" height="160">
+        <img  src="img/hobby.jpg" width="160" height="160">
+        <img  src="img/hobby.jpg" width="160" height="160">
+        <img  src="img/hobby.jpg" width="160" height="160">
+        <img  src="img/hobby.jpg" width="160" height="160">
+        <img  src="img/hobby.jpg" width="160" height="160">
+        <img  src="img/hobby.jpg" width="160" height="160">
+    </div>
+</div>
+
 </body>
 </html>
