--- a/contact.html
+++ b/contact.html
@@ -15,46 +15,52 @@
 <header class=""> </header>
 
 <!-- featurette -->
-<div class="contact-title">
 
-   <h3>Contact Us</h3>
-    <p>we are always ready to help!</p>
+
 
 <!-- animation-->
 
 <!-- contact form -->
-    <div class="contact1">
-        <div class="container-contact1">
+
+<div class="container container-contact1">
+    <div class="row">
+        <div class="col-sm">
             <div class="form" >
+                <form>
+
+                    <h1>Contact us!</h1>
+                    <p> voice your concerns, or simply drop a nice comment.</p>
 
                     <input class="input1" type="text" name="name" placeholder="Name"/>
-                    <label for="input" class="label-name"><span class="content-name"></span></label>
+                    <label  class="label-name"><span class="content-name"></span></label>
 
-                <div class="wrap-input1 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                    <div class="wrap-input1 required">
                     <input class="input1" type="text" name="email" placeholder="Email">
-                    <span class="shadow-input1"></span>
-                </div>
-                <div class="wrap-input1 validate-input" data-validate="Subject is required">
+                    <span></span>
+                    </div>
+
+
+
+                    <div class="wrap-input1 validate-input" data-validate="Subject is required">
                     <input class="input1" type="text" name="subject" placeholder="Subject">
                     <span class="shadow-input1"></span>
-                </div>
-                <div class="wrap-input1 validate-input" data-validate="Message is required">
-                    <textarea class="input1" name="message" placeholder="Message"></textarea>
-                    <span class="shadow-input1"></span>
-                </div>
-                <div class="container-contact1-form-btn">
-                    <button class="contact1-form-btn">
-                    <span>Send Email</span>
-                    </button>
-                </div>
+                     </div>
 
-            </form>
+
+                    <div class="form-group">
+                        <label for="exampleTextarea"></label>
+                        <textarea class="form-control" id="exampleTextarea" rows="3" placeholder="short description"></textarea>
+                    </div>
+
+                    <button type="button" class="btn btn-info">Submit</button>
+
+
+                </form>
+
+            </div>
         </div>
     </div>
-
-
-
-
+</div>
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
