--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="img/movies.jpg" alt="changing picture">
+            <img src="img/movies.jpg" class="d-block w-100" alt="changing picture">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Filmbox</h5>
                 <p>Customize your Filmbox and choose your desired items</p>
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="img/snackies.jpeg" class="d-block w-100" alt="changing picture">
+            <img src="img/snackboxbig.jpg" class="d-block w-100" alt="changing picture">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Snackbox</h5>
                 <p>Customize your Snackbox heren and choose your favourite candy</p>
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="img/art.jpg" class="d-block w-100" alt="changing picture">
+            <img src="img/stationary.jpg" class="d-block w-100" alt="changing picture">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Stationary box</h5>
                 <p>Customize your Stationary box here and choose your favourite items</p>
@@ -88,11 +88,29 @@
 <br>
 <br>
 
+
+<div id="information" align="center">
+    <h1>100% Customizable </h1><br/>
+    <h3>Because you deserve it !</h3><br/>
+
+    LIMITED QUANTITIES AVAILABLE!!!! <br/>
+    Mystery Boxes are not permanent items.<br/>
+    Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets .
+<br/>
+
+
+</div>
+
+
+
+
+
+
 <div class="container">
     <div class="row">
 
         <div class="col-md-4 border-0 " align="center">
-            <img class="rounded-circle" src="img/movies.jpg" alt="changing picture" width="140" height="140">
+            <img class="rounded-circle" src="img/gadget.jpg" alt="changing picture" width="140" height="140">
             <div class="card-body" >
                 <h5 class="card-title">Filmbox</h5>
                 <p class="card-text">Customize your Filmbox and choose your desired items</p>
@@ -129,8 +147,8 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Find the perfect box for you</h5>
-                    <p class="card-text">
+                    <h5 class="card-title" align="center">Find the perfect box for you</h5>
+                    <p class="card-text" align="center">
                         Find the perfect box for you
 
                         No matter what you're interested in, you'll find a subscription box you love
@@ -145,12 +163,12 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters">
             <div class="col-md-4">
-                <img src="img/newbox.jpeg" class="card-img" alt="changing picture">
+                <img src="img/luckydip.jpg" class="card-img" alt="changing picture">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Find monthly new boxes</h5>
-                    <p class="card-text">Browse hundreds of subscription boxes, all in one place</p>
+                    <h5 class="card-title" align="center">Find monthly new boxes</h5>
+                    <p class="card-text" align="center">Browse hundreds of subscription boxes, all in one place</p>
 
                 </div>
             </div>
@@ -161,13 +179,13 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row no-gutters flex-row-reverse ">
             <div class="col-md-4">
-                <img src="img/newmail.jpg" class="card-img" alt="changing picture">
+                <img src="img/mailbox.jpeg" class="card-img" alt="changing picture">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Receive fun things in your mail
+                    <h5 class="card-title" align="center">Receive fun things in your mail
                     </h5>
-                    <p class="card-text">Receive curated products just for you on a recurring basis</p>
+                    <p class="card-text" align="center">Receive curated products just for you on a recurring basis</p>
 
                 </div>
             </div>
@@ -181,12 +199,12 @@
 
 <footer>
 
-    Boxes&co
+    <div id="footerleft">Boxes&co
     BE 302.878.1236
     Sint Jansvliet 4
-    2018 Antwerpen
-    Tel: 03/654.23.89
-    Email: boxesenco@info.com
+        2018 Antwerpen</div>
+    <div id="footerRight">Tel: 03/654.23.89
+        Email: boxesenco@info.com</div>
 </footer>
 
 
