--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login/Register</a>
+                    <a class="nav-link" href="#">Login</a>
                 </li>
 
 
