--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="img/movies.jpg" class="d-block w-100" alt="changing picture">
+            <img src="img/avenger.jpg" class="d-block w-100" alt="changing picture">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Filmbox</h5>
                 <p>Customize your Filmbox and choose your desired items</p>
