added side content for contact page

--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,10 @@
 
 <!-- contact form -->
 
-<div class="container container-contact1">
+<div class="container container-contact1 ">
     <div class="row">
-        <div class="col-sm">
-            <div class="form" >
+        <div class="col-md-6">
+            <div class="form">
                 <form>
 
                     <h1>Contact us!</h1>
@@ -59,9 +59,42 @@
 
             </div>
         </div>
+
+
+<!--contact links-->
+
+        <div class="col-md-6">
+            <div class="container-fluid d-flex d-inline-flex">
+                <div class="row align-items-end">
+                        <div class="container-icon ">
+                             <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/contact.png"></div>
+                             <div> <h3>Call us!</h3>
+                             <p>+32/4678/568/456</p>
+                             <p>Our customer service is available 24/7</p>
+                        </div>
+
+
+                        <div class="container-icon ">
+                            <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/social-01.png"></div>
+                            <div><h3>Or send an email</h3>
+                            <a href="mailto:info@lucky.box.com">Info@luckybox.com</a> </div>
+
+
+
+
+
+
+                    <div class="container-icon ">
+                        <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/contact.png"></div>
+                    <div> <h3>Call us!</h3>
+                        <p>+32/4678/568/456</p>
+                        <p>Our customer service is available 24/7</p></div>
+
+
+            </div>
+        </div>
     </div>
 </div>
-
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
