removing border of menu toggler and adding a main css to all pages

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.css">
     <link rel="stylesheet" href="bootstrap/bootstrap-grid.min.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="main.css">
 </head>
-</head>
+
 <body>
 <!-- nav bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -50,7 +51,7 @@
 
 <!-- contact form -->
 
-<div class="container container-contact1 ">
+<div class="container container-contact1 pt-10 ">
     <div class="row">
         <div class="col-md-6">
             <div class="form">
@@ -92,7 +93,7 @@
 <!--contact links-->
 
         <div class="col-md-6">
-            <div class="container-fluid d-flex d-inline-flex">
+            <div class="container-fluid d-flex ">
                 <div class="row align-items-end">
                         <div class="container-icon ">
                              <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/contact.png"></div>
@@ -102,9 +103,9 @@
                         </div>
 
 
-                        <div class="container-icon ">
+                        <div class="container-icon">
                             <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/social-01.png"></div>
-                            <div><h3>Or send an email</h3>
+                            <div class="email-info"><h3>Or send us an email</h3>
                             <a href="mailto:info@lucky.box.com">Info@luckybox.com</a> </div>
 
 
@@ -113,12 +114,12 @@
 
 
                     <div class="container-icon ">
-                        <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/contact.png"></div>
+                        <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/contact.png">
                     <div> <h3>Call us!</h3>
                         <p>+32/4678/568/456</p>
                         <p>Our customer service is available 24/7</p></div>
 
-
+                    </div>
             </div>
         </div>
     </div>
