checking some tags in html, adding margin under navbar

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -51,7 +52,7 @@
 
 <!-- contact form -->
 
-<div class="container container-contact1 pt-10 ">
+<div class="container container-contact1 mt-10 ">
     <div class="row">
         <div class="col-md-6">
             <div class="form">
@@ -93,36 +94,33 @@
 <!--contact links-->
 
         <div class="col-md-6">
-            <div class="container-fluid d-flex ">
-                <div class="row align-items-end">
-                        <div class="container-icon ">
-                             <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/contact.png"></div>
-                             <div> <h3>Call us!</h3>
-                             <p>+32/4678/568/456</p>
-                             <p>Our customer service is available 24/7</p>
+            <div class="container-fluid">
+                <div class="row d-flex flex-column">
+
+                        <div class=" d-flex flex-row">
+                            <div class="img-thumbnail  ">
+                             <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/contact.png">
+                            </div>
+                             <div>
+                                <h3>Call us!</h3>
+                                <p>+32/4678/568/456</p>
+                                <p>Our customer service is available 24/7</p>
+                             </div>
                         </div>
 
 
-                        <div class="container-icon">
-                            <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/social-01.png"></div>
-                            <div class="email-info"><h3>Or send us an email</h3>
-                            <a href="mailto:info@lucky.box.com">Info@luckybox.com</a> </div>
-
-
-
-
-
-
-                    <div class="container-icon ">
-                        <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/contact.png">
-                    <div> <h3>Call us!</h3>
-                        <p>+32/4678/568/456</p>
-                        <p>Our customer service is available 24/7</p></div>
-
-                    </div>
+                        <div class="d-flex flex-row">
+                            <div class="img-thumbnail">
+                                <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/social-01.png">
+                            </div>
+                            <div class="email-info">
+                            <h3>Or send us an email</h3>
+                            <a href="mailto:info@lucky.box.com">Info@luckybox.com</a>
+                            </div>
+                        </div>
+                </div>
             </div>
-        </div>
-    </div>
+         </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
