adding meta tags for title, better SEO and icon img and so on

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+
+    <meta name="robots" content="index,follow"> <!-- search engine crawler will follow all indexes of the page, appear on google faster -->
+    <link rel="icon" href="img/icon.png"> <!--icon tab>-->
     <meta name="format-detection" content="telephone=no">
-    <title>Title</title>
+    <meta name="author" content="Imane, Steve, Samira, Moeti">
+    <meta name="description" content="Subscription box that is fully customisable">
+    <title>Lucky box</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="stylesheet" href="bootstrap/bootstrap.css">
