before luch push

--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
 
                         <div id="social" class=" d-flex flex-row">
                             <div class="img-thumbnail">
-                             <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/contact.png">
+                             <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/social-02.png">
                             </div>
                              <div>
                                 <h3>Call us!</h3>
@@ -139,10 +139,26 @@
             </div>
         </div>
 </div>
+</div>
+
+    <footer id="sticky-footer" class=" bg-dark text-white-50">
+        <div class="container py-3">
+            <small> &copy; 2019 Lucky box</small>
+        </div>
+        <div class="container py-3 socialicons d-flex flex-row mr-auto">
+            <ul>
+                <li>
+            <a href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="50" height="50"></a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
 
 </body>
 </html>
