--- a/index.html
+++ b/index.html
@@ -46,20 +46,12 @@
             </ul>
         </div>
     </nav>
-<div class="container">
-<div class="parallax"></div>
-    <p>blelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
-        qmvjqmfjqùpsgfq
-        qgmqjgmvqjfgaq
-        qgmgjqif
-        blelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
-        qmvjqmfjqùpsgfq
-        qgmqjgmvqjfgaq
-        qgmgjqifblelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
-        qmvjqmfjqùpsgfq
-        qgmqjgmvqjfgaq
-        qgmgjqif
-    </p>
+<div class="container2">
+
+    <div class="parallax">
+        <h1 align="center">Lucky Box</h1>
+    </div>
+
 
     <p>blelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
         qmvjqmfjqùpsgfq
@@ -102,7 +94,7 @@
 
 
 <div id="information" align="center">
-    <h1>100% Customizable </h1><br/>
+    <h2>100% Customizable </h2><br/>
     <h3>Because you deserve it !</h3><br/>
 
     LIMITED QUANTITIES AVAILABLE!!!! <br/>
