google maps fix

--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
                                 <div class="map d-flex flex-row">
                                     <div>
                                         <h3>Pay us a visit!</h3>
-                                        <iframe  style="border:0" src="https://www.google.com/maps/embed/v1/place?q=area%2051&key=..."></iframe>
+                                        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3504.721672565506!2d4.404880346693864!3d51.21711684087369!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sbox!5e0!3m2!1sen!2sbe!4v1576057139126!5m2!1sen!2sbe"   style="border:0;" ></iframe>
                                     </div>
                                 </div>
                         </div>
@@ -147,7 +147,7 @@
         </div>
         <div class="container py-3 socialicons d-flex flex-row mr-auto">
             <ul>
-                <li>
+                <li class="socialmedia">
             <a href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="50" height="50"></a>
                 </li>
             </ul>
