added text for description website and warning box

--- a/index.html
+++ b/index.html
@@ -53,30 +53,23 @@
     </div>
 
 
-    <p>blelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
-        qmvjqmfjqùpsgfq
-        qgmqjgmvqjfgaq
-        qgmgjqif
-        blelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
-        qmvjqmfjqùpsgfq
-        qgmqjgmvqjfgaq
-        qgmgjqifblelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
-        qmvjqmfjqùpsgfq
-        qgmqjgmvqjfgaq
-        qgmgjqif
-    </p> <p>blelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
-    qmvjqmfjqùpsgfq
-    qgmqjgmvqjfgaq
-    qgmgjqif
-    blelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
-    qmvjqmfjqùpsgfq
-    qgmqjgmvqjfgaq
-    qgmgjqifblelabjmqkjiqjfkq qsmvqlkjvmoiqjf qmqkjmqjfaq mkjqmifjq fq
-    qmvjqmfjqùpsgfq
-    qgmqjgmvqjfgaq
-    qgmgjqif
-</p>
+    <div class="wrapper">
+        <div class="content">
+            <h2 class="hdr-2">The Original Fan-Powered Subscription</h2>
+            <p class="text">Founded in 2012, Lucky Box™, Inc. is the worldwide leader in fan subscription boxes.
+                Lucky Box partners with industry leaders in entertainment, hobby's,
+                and snacks to deliver monthly themed boxes,
+                produce interactive experiences and digital content, and film original video productions.
+                In its first five years, Lucky Box has delivered over 14 million boxes to fans in 35 territories across
+                the globe.</p>
 
+            <p class="text"><i class="fa fa-child" aria-hidden="true"></i> <strong>Powered By Becode.org</strong> —
+                We approach everything that we do with playfulness and humor, and try to create multiple layers of discovery for fans.
+                Whether it's shipping a crate that turns into a proton-pack, or re-creating a "floating" hoverboard at 1:5 scale,
+                everything we do is intended to bring your fandom into the real world, and to your door, in unexpected ways.</p>
+
+        </div>
+    </div>
 
 </div>
 
@@ -96,14 +89,16 @@
 <div id="information" align="center">
     <h2>100% Customizable </h2><br/>
     <h3>Because you deserve it !</h3><br/>
-
-    LIMITED QUANTITIES AVAILABLE!!!! <br/>
-    Mystery Boxes are not permanent items.<br/>
-    Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets .
-<br/>
-
-
 </div>
+
+
+
+  <div id ="warning"> LIMITED QUANTITIES AVAILABLE!!!!<br/>
+    Mystery Boxes are not permanent items.<br/>
+      Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets .</div>
+
+
+
 
 
 
