--- a/index.html
+++ b/index.html
@@ -89,13 +89,14 @@
 <div id="information" align="center">
     <h2>100% Customizable </h2><br/>
     <h3>Because you deserve it !</h3><br/>
+    LIMITED QUANTITIES AVAILABLE!!!!<br/>
+    Mystery Boxes are not permanent items.<br/>
+    Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets
 </div>
 
 
 
-  <div id ="warning"> LIMITED QUANTITIES AVAILABLE!!!!<br/>
-    Mystery Boxes are not permanent items.<br/>
-      Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets .</div>
+
 
 
 
