--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                         <textarea class="form-control" id="exampleTextarea" rows="3" placeholder="short description"></textarea>
                     </div>
 
-                 <button id=buttonform class="btn" type="submit" value="submit">submit</button>
+                 <button id=buttonform class="btn" type="submit" value="submit" >submit</button>
 
 
                 </form>
@@ -104,7 +104,7 @@
             <div class="container-fluid">
                 <div class="row d-flex flex-column">
 
-                        <div id="social" class=" d-flex flex-row">
+                        <div class="social" class=" d-flex flex-row">
                             <div class="img-thumbnail">
                              <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/social-02.png">
                             </div>
@@ -116,7 +116,7 @@
                         </div>
 
 
-                        <div id="social" class="d-flex flex-row">
+                        <div class="social" class="d-flex flex-row">
 
                             <div class="img-thumbnail">
                                 <img class="img-fluid" id="thumbnail"  alt="Responsive image" src="ICONS/social-01.png">
@@ -140,18 +140,25 @@
         </div>
 </div>
 </div>
+<a href="#"><i class="fas fa-arrow-up"></i></a>
 
-    <footer id="sticky-footer" class=" bg-dark text-white-50">
-        <div class="container py-3">
-            <small> &copy; 2019 Lucky box</small>
+<!-- footer -->
+    <footer id="sticky-footer" class=" bg-dark text-white-50 ">
+        <div class="container-fluid d-flex py-3">
+
+
+
+             <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
+
+                <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="30" height="30"></a>
+
+                 <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="ICONS/twitter.svg" width="30" height="30"></a>
+
+
         </div>
-        <div class="container py-3 socialicons d-flex flex-row mr-auto">
-            <ul>
-                <li class="socialmedia">
-            <a href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="50" height="50"></a>
-                </li>
-            </ul>
-        </div>
+
+
+
     </footer>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
