checking why footer doesnt work

--- a/custom.html
+++ b/custom.html
@@ -239,24 +239,19 @@
 
 
 </div>
+
+<!-- footer -->
 <footer id="sticky-footer" class=" bg-dark text-white-50 ">
     <div class="container-fluid d-flex py-3">
-
-
 
         <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
 
         <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="30" height="30"></a>
 
         <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="ICONS/twitter.svg" width="30" height="30"></a>
-
-
     </div>
 
-
-
 </footer>
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
