adding footer on all pages, adding padding and adjusting html tags on index page, making all buttons red

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 <header>
 <!-- navbar -->
 
-
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Lucky Box</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,24 +44,25 @@
             </ul>
         </div>
     </nav>
+
 <div class="container2">
 
     <div class="parallax">
-        <h1 align="center">Lucky Box</h1>
+        <h1 class="Luckyboxtitle" align="center">Lucky Box</h1>
     </div>
 
 
     <div class="wrapper">
         <div class="content">
-            <h2 class="hdr-2">The Original Fan-Powered Subscription</h2>
-            <p class="text">Founded in 2012, Lucky Box™, Inc. is the worldwide leader in fan subscription boxes.
+            <h2 class="titleRed">The Original Fan-Powered Subscription</h2>
+            <p class="introtext">Founded in 2012, Lucky Box™, Inc. is the worldwide leader in fan subscription boxes.
                 Lucky Box partners with industry leaders in entertainment, hobby's,
                 and snacks to deliver monthly themed boxes,
                 produce interactive experiences and digital content, and film original video productions.
                 In its first five years, Lucky Box has delivered over 14 million boxes to fans in 35 territories across
                 the globe.</p>
 
-            <p class="text"><i class="fa fa-child" aria-hidden="true"></i> <strong>Powered By Becode.org</strong> —
+            <p class="introtext"><i class="fa fa-child" aria-hidden="true"></i> <strong>Powered By Becode.org</strong> —
                 We approach everything that we do with playfulness and humor, and try to create multiple layers of discovery for fans.
                 Whether it's shipping a crate that turns into a proton-pack, or re-creating a "floating" hoverboard at 1:5 scale,
                 everything we do is intended to bring your fandom into the real world, and to your door, in unexpected ways.</p>
@@ -87,11 +86,11 @@
 
 
 <div id="information" align="center">
-    <h2>100% Customizable </h2><br/>
-    <h3>Because you deserve it !</h3><br/>
-    LIMITED QUANTITIES AVAILABLE!!!!<br/>
+    <h1 class="title pb-4">100% Customizable </h1>
+    <h4 class="italicfont">Because you deserve it!</h4>
+   <h2> LIMITED QUANTITIES AVAILABLE</h2>
     Mystery Boxes are not permanent items.<br/>
-    Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets .</div>
+   <p> Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets.</p></div>
 
 
 
@@ -194,7 +193,23 @@
 </div>
 
 
+<section class="footer">
 
+    <a href="#"><i class="fas fa-arrow-up"></i></a>
+
+    <footer id="sticky-footer" class=" bg-dark text-white-50">
+        <div class="container-fluid d-flex py-3">
+
+            <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
+
+            <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="30" height="30"></a>
+
+            <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="ICONS/twitter.svg" width="30" height="30"></a>
+
+        </div>
+
+    </footer>
+</section>
 
 
 
