--- a/Login.html
+++ b/Login.html
@@ -74,9 +74,25 @@
 
 
 </div>
+<!--footer-->
 
+<section class="footer">
 
+    <a href="#"><i class="fas fa-arrow-up"></i></a>
 
+    <footer id="sticky-footer" class=" bg-dark text-white-50">
+        <div class="container-fluid d-flex py-3">
+
+            <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
+
+            <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="30" height="30"></a>
+
+            <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="ICONS/twitter.svg" width="30" height="30"></a>
+
+        </div>
+
+    </footer>
+</section>
 
 </body>
 
