--- a/register.html
+++ b/register.html
@@ -99,7 +99,24 @@
     </div>
     <button type="submit" class="btn btn-primary">Sign in</button>
 </form>
+<!-- footer-->
+<section class="footer">
 
+    <a href="#"><i class="fas fa-arrow-up"></i></a>
+
+    <footer id="sticky-footer" class=" bg-dark text-white-50">
+        <div class="container-fluid d-flex py-3">
+
+            <small class="p-2 flex-grow-1"> &copy; 2019 Lucky box</small>
+
+            <a class="pr-3" href="https://www.instagram.com/" target="_blank"><img src="ICONS/instaiconwhite-06.png" width="30" height="30"></a>
+
+            <a  class="pr-3" href="https://twitter.com/whattheboxgame?lang=en" target="_blank"><img src="ICONS/twitter.svg" width="30" height="30"></a>
+
+        </div>
+
+    </footer>
+</section>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
