--- a/html/Login.html
+++ b/html/Login.html
@@ -34,21 +34,21 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="custom.html">Boxes</a>
+                    <a class="nav-link" href="html/custom.html">Boxes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="html/contact.html">Contact</a>
                 </li>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Login
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="Login.html">Login</a>
-                        <a class="dropdown-item" href="register.html">Register</a>
+                        <a class="dropdown-item" href="html/Login.html">Login</a>
+                        <a class="dropdown-item" href="html/register.html">Register</a>
 
                     </div>
                 </li>
