changed circles to solid and removed card borders

--- a/index.html
+++ b/index.html
@@ -93,10 +93,13 @@
 
 <div id="information" align="center">
     <h1 class="title pb-4">100% Customizable </h1>
-    <h4 class="italicfont">Because you deserve it!</h4>
    <h2> LIMITED QUANTITIES AVAILABLE</h2>
-    Mystery Boxes are not permanent items.<br/>
-   <p> Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets.</p></div>
+
+   <p> Each box contains full size products, an additional Pop Socket, and limited edition Movie Gadgets.</p>
+   <small> *Mystery Boxes are not permanent items.<br/></small>
+
+
+</div>
 
 
 
@@ -115,10 +118,10 @@
     <div class="row">
 
         <div class="col-md-4 border-0 " align="center">
-            <img class="rounded-circle" src="img/gadget.jpg" alt="changing picture" width="140" height="140">
+            <img class="rounded-circle" src="img/avenger.jpg" alt="changing picture" width="140" height="140">
             <div class="card-body" >
                 <h5 class="card-title">Filmbox</h5>
-                <p class="card-text">Customize your Filmbox and choose your desired items</p>
+                <p class="card-text">Customize your Filmbox <br/> and choose your desired items</p>
                 <a href="#" class="btn btn-primary">Get Filmbox</a>
             </div>
         </div>
@@ -154,9 +157,10 @@
                 <div class="card-body">
                     <h5 class="card-title" align="center">Find the perfect box for you</h5>
                     <p class="card-text" align="center">
-                        Find the perfect box for you
 
-                        No matter what you're interested in, you'll find a subscription box you love
+
+                        No matter what you're interested in,
+                        you'll find a subscription box you love.
                     </p>
 
                 </div>
@@ -173,7 +177,8 @@
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title" align="center">Find monthly new boxes</h5>
-                    <p class="card-text" align="center">Browse hundreds of subscription boxes, all in one place</p>
+                    <p class="card-text" align="center">Browse hundreds of subscription boxes,
+                        all in one place.</p>
 
                 </div>
             </div>
@@ -190,7 +195,8 @@
                 <div class="card-body">
                     <h5 class="card-title" align="center">Receive fun things in your mail
                     </h5>
-                    <p class="card-text" align="center">Receive curated products just for you on a recurring basis</p>
+                    <p class="card-text" align="center">Receive curated products just for you
+                        on a recurring basis.</p>
 
                 </div>
             </div>
