deleting unnecessary images

--- a/html/contact.html
+++ b/html/contact.html
@@ -55,7 +55,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 part1 pr-10">
             <!-- contact form -->
             <form action="https://formspree.io/xaynkalb" method="POST">
 
@@ -86,9 +86,9 @@
                 <button id=buttonform class="btn" type="submit" value="submit" >submit</button>
             </form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 part2">
             <!--contact links-->
-            <img class="img-fluid" class="img-thumbnail"  alt="Responsive image" src="ICONS/social-02.png">
+            <img class="img-fluid" class="img-thumbnail"  alt="Responsive image" src="../ICONS/social-02.png">
 
 
             <div>
@@ -103,7 +103,7 @@
             <div  class=" flex-row">
 
 
-                <img class="img-fluid img-thumbnail"  alt="Responsive image" src="ICONS/social-01.png">
+                <img class="img-fluid img-thumbnail"  alt="Responsive image" src="../ICONS/social-01.png">
 
                 <div class="email-info">
                     <h3>Or send us an email</h3>
