--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="container2">
 
     <div class="parallax">
-        <h1 class="Luckyboxtitle" align="center">Lucky Box</h1>
+        <h1 class="Luckyboxtitle" >Lucky Box</h1>
     </div>
 
 
@@ -91,7 +91,7 @@
 
 
 
-<div id="information" align="center">
+<div id="information" >
     <h1 class="title pb-4">100% Customizable </h1>
    <h2> LIMITED QUANTITIES AVAILABLE</h2>
 
