custom links fixed

--- a/html/custom.html
+++ b/html/custom.html
@@ -81,7 +81,7 @@
         <p><a class="btn btn-secondary" href="#2ndStep" role="button">pick this one &raquo;</a></p>
     </div>
     <div class="col-lg-3 col-md-4 col-sm-12 text-center step1box">
-        <img class="rounded-circle" src="../img/medium-box.png" width="140" height="140">
+        <img class="rounded-circle ontop" src="../img/medium-box.png" width="140" height="140">
         <h2>Medium Box</h2>
         <p>An average size box with a decent amount of items from all choice options</p>
         <p><a class="btn btn-secondary" href="#2ndStep" role="button">pick this one &raquo;</a></p>
@@ -89,7 +89,7 @@
     <div class="col-lg-3 col-md-4 col-sm-12 text-center step1box">
         <img class="rounded-circle" src="../img/big%20box.jpg" width="140" height="140">
         <h2>Big Box</h2>
-        <p>A large sized box containing more items from all choice options </p>
+        <p>A large sized box containing a large amount of items from all choice options </p>
         <p><a class="btn btn-secondary" href="#2ndStep" role="button">pick this one &raquo;</a></p>
     </div>
 </div>
