added changes to border title and color

--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
        <img class="imagepar" src="img/tekst-white-02.png ">
     </div>
 
-
+    <div class="titleBlack">The Original Fan-Powered Subscription</div>
     <div class="wrapper">
+
         <div class="content">
-            <h2 class="titleRed">The Original Fan-Powered Subscription</h2>
+
             <p class="introtext">Founded in 2012, Lucky Box™, Inc. is the worldwide leader in fan subscription boxes.
                 Lucky Box partners with industry leaders in entertainment, hobby's,
                 and snacks to deliver monthly themed boxes,
