--- a/html/custom.html
+++ b/html/custom.html
@@ -174,7 +174,7 @@
 
     <div class="row pt-3" id="movierow">
         <div class="hover01">
-        <figure> <img src="../img/moviegadget1.jpg" width="200" height="200"> </figure>
+        <figure> <img src="../img/yoda.png" width="200" height="200"> </figure>
             <div>
                 <label><input type="checkbox" /> baby yoda</label>
             </div>
